[gd_scene load_steps=38 format=3 uid="uid://b5s2xjtsrnukx"]

[ext_resource type="Script" uid="uid://w3nb76ktx1jr" path="res://src/game/entities/not_enemies/player.gd" id="1_4ohmj"]
[ext_resource type="Texture2D" uid="uid://b8y23l3txtasg" path="res://assets/textures/player/walk/walk_00.png" id="2_3d7ta"]
[ext_resource type="AudioStream" uid="uid://cg5mcs7cy8juh" path="res://assets/sound/player/swim_with_bubles.mp3" id="2_483nw"]
[ext_resource type="Texture2D" uid="uid://t0ecywtwoeab" path="res://assets/textures/player/idle/idle_2.png" id="2_bnhqw"]
[ext_resource type="Texture2D" uid="uid://chkf5h360n0c3" path="res://assets/textures/player/idle/idle_3.png" id="3_753ju"]
[ext_resource type="Shader" uid="uid://by26gmulm0sd1" path="res://src/game/entities/not_enemies/player.gdshader" id="3_b6hsd"]
[ext_resource type="Texture2D" uid="uid://bpec3id1vcjpa" path="res://assets/textures/player/walk/walk_01.png" id="3_bnhqw"]
[ext_resource type="Texture2D" uid="uid://gpxeih1m8tca" path="res://assets/textures/player/jump/jump_0.png" id="4_73mqe"]
[ext_resource type="Texture2D" uid="uid://g77uckby1gjd" path="res://assets/textures/player/walk/walk_02.png" id="4_753ju"]
[ext_resource type="Texture2D" uid="uid://dnt0xgelw65w2" path="res://assets/textures/player/idle/idle_4.png" id="4_mwgf3"]
[ext_resource type="Texture2D" uid="uid://bf5muolwjra5q" path="res://assets/textures/player/walk/walk_03.png" id="5_mwgf3"]
[ext_resource type="Texture2D" uid="uid://bddlcd4jmo4w5" path="res://assets/textures/player/walk/walk_04.png" id="6_obrgw"]
[ext_resource type="Texture2D" uid="uid://c0u0hd43ofhrk" path="res://assets/textures/player/walk/walk_05.png" id="7_3a8uq"]
[ext_resource type="Texture2D" uid="uid://ckvtim08u6g61" path="res://assets/textures/player/walk/walk_06.png" id="8_jis8g"]
[ext_resource type="Texture2D" uid="uid://d08pdr3s8dsvi" path="res://assets/textures/player/walk/walk_07.png" id="9_73mqe"]
[ext_resource type="Texture2D" uid="uid://nchem3rjy05p" path="res://assets/textures/player/walk/walk_08.png" id="10_4ohmj"]
[ext_resource type="Texture2D" uid="uid://cyohupgn5f1i7" path="res://assets/textures/player/walk/walk_09.png" id="11_vf103"]
[ext_resource type="Texture2D" uid="uid://b2dabngvxsw0h" path="res://assets/textures/player/walk/walk_10.png" id="12_2x24p"]
[ext_resource type="Texture2D" uid="uid://cotanv146878g" path="res://assets/textures/player/walk/walk_11.png" id="13_f0kc4"]
[ext_resource type="Script" uid="uid://bnelajanpbmfr" path="res://src/game/entities/not_enemies/state_machine.gd" id="17_753ju"]
[ext_resource type="Script" uid="uid://bn1uk83fgflr8" path="res://src/game/scripts/states/player/player_idle_state.gd" id="18_mwgf3"]
[ext_resource type="PackedScene" uid="uid://cxs653sqc2cfa" path="res://assets/utility/point_light.tscn" id="19_7ruc6"]
[ext_resource type="Texture2D" uid="uid://cjjf82obnpjxm" path="res://assets/textures/bubbles/bubble_4.png" id="19_fdc7v"]
[ext_resource type="Script" uid="uid://b8jgpxj1ccsss" path="res://src/game/scripts/states/player/player_walk_state.gd" id="19_obrgw"]
[ext_resource type="Script" uid="uid://dfcjh1w7f8hl2" path="res://src/game/scripts/states/player/player_jump_state.gd" id="20_3a8uq"]
[ext_resource type="AudioStream" uid="uid://bp6vc1rq50aw5" path="res://assets/sound/player/swoop1_108087.mp3" id="20_05p3n"]
[ext_resource type="Script" uid="uid://b2lscshlwxjx5" path="res://src/game/scripts/states/player/player_dash_state.gd" id="21_jis8g"]
[ext_resource type="AudioStream" uid="uid://deix1e76jw1pu" path="res://assets/sound/player/only_step.ogg" id="21_kycvn"]
[ext_resource type="AudioStream" uid="uid://vhg4vjk2w1ew" path="res://assets/sound/player/jumping_1_6452.mp3" id="22_05p3n"]
[ext_resource type="PackedScene" uid="uid://c8ekq2vk56rn6" path="res://src/game/inventory/Inventory.tscn" id="22_73mqe"]
[ext_resource type="PackedScene" uid="uid://c1dkmd6hm8y05" path="res://assets/utility/camera_2d.tscn" id="24_vf103"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i87q2"]
radius = 26.0
height = 120.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fdc7v"]
blend_mode = 1
light_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_fdc7v"]
_limits = [-500.0, 500.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.29651162, 207.86517), 0.0, 0.0, 0, 0, Vector2(0.44186044, 455.0562), 0.0, 0.0, 0, 0, Vector2(0.8604651, 219.10114), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Curve" id="Curve_05p3n"]
_limits = [0.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.37790698, 56.17978), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="SpriteFrames" id="SpriteFrames_cd5ud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bnhqw")
}, {
"duration": 1.0,
"texture": ExtResource("3_753ju")
}, {
"duration": 1.0,
"texture": ExtResource("4_mwgf3")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_73mqe")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3d7ta")
}, {
"duration": 1.0,
"texture": ExtResource("3_bnhqw")
}, {
"duration": 1.0,
"texture": ExtResource("4_753ju")
}, {
"duration": 1.0,
"texture": ExtResource("5_mwgf3")
}, {
"duration": 1.0,
"texture": ExtResource("6_obrgw")
}, {
"duration": 1.0,
"texture": ExtResource("7_3a8uq")
}, {
"duration": 1.0,
"texture": ExtResource("8_jis8g")
}, {
"duration": 1.0,
"texture": ExtResource("9_73mqe")
}, {
"duration": 1.0,
"texture": ExtResource("10_4ohmj")
}, {
"duration": 1.0,
"texture": ExtResource("11_vf103")
}, {
"duration": 1.0,
"texture": ExtResource("12_2x24p")
}, {
"duration": 1.0,
"texture": ExtResource("13_f0kc4")
}],
"loop": true,
"name": &"walk",
"speed": 20.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kycvn"]
shader = ExtResource("3_b6hsd")
shader_parameter/distortion_strength = 0.0010000000475
shader_parameter/distortion_speed = 0.6
shader_parameter/water_fog_color = Color(0.10736025, 0.4151431, 0.5204662, 0.2)
shader_parameter/fog_depth_y = 1000.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 2
collision_layer = 12
collision_mask = 3
script = ExtResource("1_4ohmj")
acceleration = 100.0
dash_speed = 600.0
gravity = 200.0
jump_speed = 200
metadata/_edit_group_ = true

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(-2, -60)
shape = SubResource("CapsuleShape2D_i87q2")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_fdc7v")
texture = ExtResource("19_fdc7v")
lifetime = 1.97
speed_scale = 0.4
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, 100)
gravity = Vector2(0, -800)
initial_velocity_min = 41.24
initial_velocity_max = 82.48
orbit_velocity_curve = SubResource("Curve_fdc7v")
scale_amount_min = 0.5
color = Color(0, 0.40392157, 0.4117647, 0.7882353)
anim_speed_max = 5.28
anim_speed_curve = SubResource("Curve_05p3n")

[node name="AnimatedPlayer" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -62)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_cd5ud")
animation = &"walk"

[node name="PointLight2D" parent="." instance=ExtResource("19_7ruc6")]
position = Vector2(5.000025, -20.500008)
scale = Vector2(2.7, 2.7)
color = Color(0.8324709, 0.8887561, 1, 1)
energy = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_kycvn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.06666667)

[node name="Camera" parent="." instance=ExtResource("24_vf103")]
offset = Vector2(0, -100)

[node name="Sounds" type="Node2D" parent="."]
scale = Vector2(1e-05, 1e-05)

[node name="StepSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("21_kycvn")
volume_db = -12.117
bus = &"SFX"

[node name="WashSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("20_05p3n")
bus = &"SFX"

[node name="SwimmingSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("2_483nw")
volume_db = -36.617
bus = &"SFX"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("22_05p3n")
volume_db = -16.769
bus = &"SFX"

[node name="Message" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Message"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.5
offset_top = 27.0
offset_right = 133.5
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "¡Tenés que recolectar diez muestras!"

[node name="ComeBackLabel" type="Label" parent="Message"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 28.0
offset_right = 114.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "¡Volvé al principio!"

[node name="Timers" type="Node" parent="."]

[node name="DoubleTapTimer" type="Timer" parent="Timers"]
wait_time = 0.8
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.2

[node name="DashColdDown" type="Timer" parent="Timers"]

[node name="SwimBoostColdDown" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true
ignore_time_scale = true

[node name="ParticlesGeneralTimer" type="Timer" parent="Timers"]
wait_time = 3.057
autostart = true

[node name="ParticlesTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="MessageTimer" type="Timer" parent="Timers"]
wait_time = 3.0
autostart = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("17_753ju")
initial_state = NodePath("PlayerWalkState")

[node name="PlayerWalkState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("19_obrgw")
player = NodePath("../..")
step_sounds = Array[AudioStream]([ExtResource("21_kycvn")])
metadata/_custom_type_script = "uid://b8jgpxj1ccsss"

[node name="PlayerIdleState" type="Node" parent="StateMachine"]
script = ExtResource("18_mwgf3")
metadata/_custom_type_script = "uid://bn1uk83fgflr8"

[node name="PlayerJumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("20_3a8uq")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dfcjh1w7f8hl2"

[node name="PlayerDashState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("21_jis8g")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b2lscshlwxjx5"

[node name="ItemDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ItemDetector"]
texture_filter = 1
position = Vector2(-2, -60)
shape = SubResource("CapsuleShape2D_i87q2")

[node name="Inventory" parent="." instance=ExtResource("22_73mqe")]

[connection signal="timeout" from="Timers/DoubleTapTimer" to="." method="_on_double_tap_timer_timeout"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Timers/DashColdDown" to="." method="_on_dash_cold_down_timeout"]
[connection signal="timeout" from="Timers/SwimBoostColdDown" to="." method="_on_swim_boost_cold_down_timeout"]
[connection signal="timeout" from="Timers/ParticlesGeneralTimer" to="." method="_on_particles_general_timer_timeout"]
[connection signal="timeout" from="Timers/ParticlesTimer" to="." method="_on_particles_timer_timeout"]
[connection signal="timeout" from="Timers/MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="area_entered" from="ItemDetector" to="." method="_on_item_detector_area_entered"]
[connection signal="body_entered" from="ItemDetector" to="." method="_on_item_detector_body_entered"]
[connection signal="body_exited" from="ItemDetector" to="." method="_on_item_detector_body_exited"]
